finished first test of the two sets

--- a/openpiv_windef_demo.ipynb
+++ b/openpiv_windef_demo.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "image_path = pathlib.Path(r'./data/')\n",
+    "image_path = pathlib.Path(r'./test/')\n",
     "\n",
     "file_list = []\n",
     "for path in sorted(image_path.rglob('*.bmp')):\n",
