ignored png, we have them in the notebooks

--- a/openpiv_2B_Particles_50mm.ipynb
+++ b/openpiv_2B_Particles_50mm.ipynb
@@ -249,20 +249,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "res_list = []\n",
-    "for path in sorted(res_path.rglob('*.txt')):\n",
-    "    # print(f'{path.name}')\n",
-    "    res_list.append(res_path / path.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -382,7 +368,7 @@
     "                           image_name = image_path / file_list[i], \n",
     "                           scaling_factor=1, \n",
     "                           scale=50, width=0.002,ax=ax,widim=True)\n",
-    "    # fig.savefig(f'double_pulse_{i}.png',dpi=150)\n",
+    "    fig.savefig(f'{str(f)[:-4]}.png',dpi=150)\n",
     "\n",
     "# settings.frame_pattern_a = f1\n",
     "# settings.frame_pattern_b = f2\n",
@@ -405,9 +391,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# !cat double_pulse_*.png | ffmpeg -framerate 5 -f image2pipe -i - -c:v copy double_pulse_openpiv.mkv"
-   ]
+   "source": []
   }
  ],
  "metadata": {
